# FreeMDU

./: README.md
.github/workflows/: build.yml  ci.yml  release.yml
gui/: Cargo.toml
gui/src/: app.rs  main.rs  worker.rs
home/: README.md
protocol/src/: device.rs
