[package]
name = "freemdu-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
repository = "https://github.com/medusalix/FreeMDU"
license = "MIT OR Apache-2.0"
description = "GUI application for FreeMDU - Miele appliance diagnostics"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29"
env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }
freemdu = { path = "../protocol", features = ["native-serial"] }
log = "0.4.28"
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
serialport = "4.7"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "freemdu-gui"
path = "src/main.rs"
